--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,16 @@
 <head>
-  <title>Удалённая работа в IT</title>
+    <title>Удалённая работа в IT</title>
 </head>
- 
+
 <body>
-  <div id="render-target"></div>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <h1 class="navbar-brand">Удалённая работа в IT</h1>
+        </div>
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div id="render-target" class="container">
+</div> <!-- /.container -->
 </body>
