Applying bootstrap (step 2)

--- a/client/main.html
+++ b/client/main.html
@@ -8,9 +8,12 @@
         <div class="navbar-header">
             <h1 class="navbar-brand">Удалённая работа в IT</h1>
         </div>
+        <div class="collapse navbar-collapse">
+            <p class="navbar-text navbar-right">Найдено вакансий на hh.ru: <span id="vacancies-num" class="label label-success"></span></p>
+        </div>
     </div><!-- /.container-fluid -->
 </nav>
 
-<div id="render-target" class="container">
+<div id="vacancies" class="container">
 </div> <!-- /.container -->
 </body>
