Applying bootstrap (step 3)

--- a/client/main.html
+++ b/client/main.html
@@ -3,13 +3,12 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <h1 class="navbar-brand">Удалённая работа в IT</h1>
         </div>
-        <div class="collapse navbar-collapse">
-            <p class="navbar-text navbar-right">Найдено вакансий на hh.ru: <span id="vacancies-num" class="label label-success"></span></p>
+        <div id="vacancies-num" class="collapse navbar-collapse">
         </div>
     </div><!-- /.container-fluid -->
 </nav>
