Specializations configuration has been started

--- a/client/main.html
+++ b/client/main.html
@@ -8,11 +8,14 @@
         <div class="navbar-header">
             <h1 class="navbar-brand">Удалённая работа в IT</h1>
         </div>
-        <div id="vacancies-num" class="collapse navbar-collapse">
-        </div>
-    </div><!-- /.container-fluid -->
+        <div id="vacancies-num" class="collapse navbar-collapse"></div>
+    </div>
 </nav>
 
-<div id="vacancies" class="container">
-</div> <!-- /.container -->
+<div id="vacancies" class="container-fluid">
+</div>
+
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div id="specializations" class="container-fluid"></div>
+</div>
 </body>
