--- a/client/main.html
+++ b/client/main.html
@@ -8,14 +8,27 @@
         <div class="navbar-header">
             <h1 class="navbar-brand">Удалённая работа в IT</h1>
         </div>
-        <div id="vacancies-num" class="collapse navbar-collapse"></div>
+
+        <div class="collapse navbar-collapse">
+            <ul id="specializations" class="nav navbar-nav navbar-right"></ul>
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Ключевые слова">
+                </div>
+                <button type="submit" class="btn btn-default">Найти</button>
+            </form>
+        </div>
     </div>
 </nav>
 
-<div id="vacancies" class="container-fluid">
-</div>
+<div id="vacancies" class="container-fluid"></div>
 
 <div class="navbar navbar-default navbar-fixed-bottom">
-    <div id="specializations" class="container-fluid"></div>
+    <div class="container-fluid">
+        <p class="navbar-text">Найдено вакансий на <a href="https://hh.ru/" target="_blank"
+                                                      class="navbar-link">hh.ru</a>: <span id="vacancies-num"
+                                                                                           class="label label-success"></span>
+        </p>
+    </div>
 </div>
 </body>
