Keywords filter has been implemented

--- a/client/main.html
+++ b/client/main.html
@@ -11,12 +11,7 @@
 
         <div class="collapse navbar-collapse">
             <ul id="specializations" class="nav navbar-nav navbar-right"></ul>
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Ключевые слова">
-                </div>
-                <button type="submit" class="btn btn-default">Найти</button>
-            </form>
+            <div id="search" class="navbar-form navbar-right"></div>
         </div>
     </div>
 </nav>
