Specialization filtering has been implemented

--- a/client/main.html
+++ b/client/main.html
@@ -11,7 +11,7 @@
 
         <div class="collapse navbar-collapse">
             <ul id="specializations" class="nav navbar-nav navbar-right"></ul>
-            <div id="search" class="navbar-form navbar-right"></div>
+            <div id="search" class="navbar-right"></div>
         </div>
     </div>
 </nav>
