HH link has been corrected to go to the search page with parameters used by the site

--- a/client/main.html
+++ b/client/main.html
@@ -19,11 +19,6 @@
 <div id="vacancies" class="container-fluid"></div>
 
 <div class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text">Найдено вакансий на <a href="https://hh.ru/" target="_blank"
-                                                      class="navbar-link">hh.ru</a>: <span id="vacancies-num"
-                                                                                           class="label label-success"></span>
-        </p>
-    </div>
+    <div id="vacancies-num" class="container-fluid"></div>
 </div>
 </body>
