ESlint has been applied

--- a/client/main.html
+++ b/client/main.html
@@ -6,7 +6,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <h1 class="navbar-brand"><a href="/" title="Показать все вакансии без фильтров">Удалённая работа в IT</a></h1>
+            <h1 class="navbar-brand"><a href="/" title="Показать все вакансии без фильтров">Удалённая работа в IT</a>
+            </h1>
         </div>
 
         <div class="collapse navbar-collapse">
