GitHub Link has been added

--- a/client/main.html
+++ b/client/main.html
@@ -19,6 +19,13 @@
 <div id="vacancies" class="container-fluid"></div>
 
 <div class="navbar navbar-default navbar-fixed-bottom">
-    <div id="vacancies-num" class="container-fluid"></div>
+    <div class="container-fluid">
+        <div id="vacancies-num" class="navbar-header"></div>
+        <div class="collapse navbar-collapse">
+            <a href="https://github.com/peshrus/hh-it-remote" target="_blank" rel="noopener noreferrer"
+               class="navbar-link navbar-right" title="GitHub репозиторий этой страницы"><img alt="Логотип GitHub"
+                                                                                              src="/GitHub-Mark-32px.png"></a>
+        </div>
+    </div>
 </div>
 </body>
