--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,13 @@
 <head>
     <title>Удалённая работа в IT</title>
+
+    <meta name="description" content="HH-IT-Remote позволяет найти удалённую работу в IT. HH-IT-Remote - это вакансии с сайта HeadHunter в сфере IT для работы из дома.">
+    <meta name="yandex-verification" content="a1198d3b0b213b82" />
 </head>
 
 <body>
+<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter45111942 = new Ya.Metrika({ id:45111942, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/45111942" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
